2009-10-01  Marek Safar  <marek.safar@gmail.com>

	* profiles/*.make, platforms/linux.make: Bootstrap default profile
	using gmcs.

2008-09-11  Marek Safar  <marek.safar@gmail.com>

	* library.make: Add NO_BUILD to ignore assembly during build.

2009-07-30  Raja R Harinath  <harinath@hurrynot.org>

	* library.make (SNFLAGS): Remove '-R', since it's specific to the
	action required.
	($(build_lib)): Use -R flag with $(SN).
	($(the_lib)): Add a sanity check to verify that the assembly is signed.

2009-07-26  Raja R Harinath  <harinath@hurrynot.org>

	Make AOT compilation explicit
	* platforms/darwin.make (PLATFORM_AOT_SUFFIX): New.
	* platforms/linux.make (PLATFORM_AOT_SUFFIX): New.
	* library.make ($(build_lib)): Don't try to AOT compile the
	library in its possibly temporary location.
	(DO_AOT): Remove.  Move to ...
	($(the_lib)$(PLATFORM_AOT_SUFFIX)): ... here, new rule to
	explicitly run the AOT compilation.
	(all-local) [ENABLE_AOT]: Build the AOT compiled library as appropriate.

2009-07-26  Raja R Harinath  <harinath@hurrynot.org>

	Fix parallel-build issues with LIBRARY_USE_INTERMEDIATE_FILE
	* library.make (build_lib): Define to a profile dependent
	temporary location for LIBRARY_USE_INTERMEDIATE_FILE.
	(DO_AOT): New.  Extracted from ...
	($(build_lib)): ... here.  Simplify.  Extract code handling
	LIBRARY_USE_INTERMEDIATE_FILE into ...
	($(the_lib)) [LIBRARY_USE_INTERMEDIATE_FILE]: ... here, a new rule
	that takes care of copying the library from its temporary location
	to the final location.

2009-07-20  Jb Evain  <jbevain@novell.com>

	* profiles/monotouch.make: add monotouch profile.

2009-07-16  Raja R Harinath  <harinath@hurrynot.org>

	* profiles/net_2_0_bootstrap.make (BOOTSTRAP_PROFILE): Set to
	net_1_1_bootstrap instead of net_1_1.

2009-06-03  Zoltan Varga  <vargaz@gmail.com>

	* profiles/net_4_0.make: Add preliminary net 4.0 profile.

2009-04-09  Jonathan Pryor  <jpryor@novell.com>
