@@ -1,6 +1,7 @@
 # -*- makefile -*-
 
-BOOTSTRAP_PROFILE = net_2_0_bootstrap
+BOOTSTRAP_PROFILE = basic
+BUILD_TOOLS_PROFILE = net_2_0_bootstrap
 BOOTSTRAP_MCS = MONO_PATH="$(topdir)/class/lib/$(BOOTSTRAP_PROFILE)$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(INTERNAL_GMCS)
 MCS = MONO_PATH="$(topdir)/class/lib/$(PROFILE)$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(INTERNAL_GMCS)
 
