@@ -6,12 +6,9 @@
 #
 BOOTSTRAP_PROFILE = basic
 BOOTSTRAP_MCS = MONO_PATH="$(topdir)/class/lib/$(BOOTSTRAP_PROFILE)$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(RUNTIME) $(RUNTIME_FLAGS) $(topdir)/class/lib/$(BOOTSTRAP_PROFILE)/gmcs.exe
-MCS = MONO_PATH="$(topdir)/class/lib/$(PROFILE)$(PLATFORM_PATH_SEPARATOR)$$MONO_PATH" $(RUNTIME) $(RUNTIME_FLAGS) $(topdir)/class/lib/$(PROFILE)/gmcs.exe
+MCS = $(BOOTSTRAP_MCS)
 
 profile-check: 
-
-# Don't build with debug symbols (Mono.CompilerServices.SymbolWriter.dll dependency)
-PLATFORM_DEBUG_FLAGS =
 
 PROFILE_MCS_FLAGS = -d:NET_1_1 -d:NET_2_0
 FRAMEWORK_VERSION = 2.0
