@@ -1,3 +1,7 @@
+2009-10-02  Marek Safar  <marek.safar@gmail.com>
+
+	* profiles/net_2_0_bootstrap.make: Make it tools profile only.
+
 2009-10-01  Marek Safar  <marek.safar@gmail.com>
 
 	* profiles/*.make, platforms/linux.make: Bootstrap default profile
